# rust-onelogin-mcp-server

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  onelogin_api_documentation_structure.json  setup-claude.sh  test_api_direct.sh  test_mcp_server.sh  test_update_role.sh
scripts/: setup.py
src/: cli.rs  main.rs
src/api/: account.rs  api_auth.rs  app_rules.rs  apps.rs  branding.rs  certificates.rs  connectors.rs  custom_attributes.rs  device_trust.rs  directories.rs  embed_tokens.rs  events.rs  groups.rs  invitations.rs  login.rs  login_pages.rs  mfa.rs  mod.rs  oauth.rs  oidc.rs  password_policies.rs  policies.rs  privileges.rs  rate_limits.rs  reports.rs  roles.rs  saml.rs  scim.rs  self_registration.rs  sessions.rs  smart_hooks.rs  smart_mfa.rs  trusted_idps.rs  user_mappings.rs  users.rs  vigilance.rs  webhooks.rs
src/core/: auth.rs  cache.rs  circuit_breaker.rs  client.rs  config.rs  error.rs  mod.rs  rate_limit.rs  tenant_manager.rs  tool_config.rs
src/mcp/: server.rs  tools.rs
src/models/: account.rs  api_auth.rs  app_rules.rs  apps.rs  branding.rs  certificates.rs  connectors.rs  custom_attributes.rs  device_trust.rs  directories.rs  embed_tokens.rs  events.rs  groups.rs  invitations.rs  login.rs  login_pages.rs  mfa.rs  mod.rs  oauth.rs  oidc.rs  password_policies.rs  policies.rs  privileges.rs  rate_limits.rs  reports.rs  roles.rs  saml.rs  scim.rs  self_registration.rs  sessions.rs  smart_hooks.rs  smart_mfa.rs  trusted_idps.rs  (+4 more)
tests/: test_all.py  test_smoke.py
(+3 files in other folders)
