[package]
name = "onelogin-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A comprehensive MCP server for OneLogin API with 100% endpoint coverage"
license = "MIT"
repository = "https://github.com/yourusername/onelogin-mcp-server"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Configuration
dotenv = "0.15"

# Security
secrecy = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

# Rate limiting
governor = "0.6"

# Circuit breaker
failsafe = "1.2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
mockito = "1.2"
wiremock = "0.5"
test-case = "3.3"
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "onelogin-mcp-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
